--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <nav>
         <ul class="burger_menu">
           <li><a href="index.html">Groben</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="error.html">Nyheder</a></li>
           <li><a href="error.html">Ugens program</a></li>
           <li><a href="error.html">Køb gavekort</a></li>
