--- a/portfolio.html
+++ b/portfolio.html
@@ -15,9 +15,7 @@
     <header>
       <h1>#SesPåGroben</h1>
       <nav>
-        <a href="index.html">Index</a>
-        <a href="billeder.html">Billeder</a>
-        <a href="video.html">Video</a>
+        <a href="index.html">Tilbage til kampagnen</a>
       </nav>
     </header>
 
