mere og mere skelet på rigtog side

--- a/index.html
+++ b/index.html
@@ -43,10 +43,62 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <h1 class="groben">#SesPåGroben</h1>
+      <div class="wrapper">
+        <iframe src="" frameborder="0"></iframe>
+        <section>
+          <p>
+            Vitae doloremque qui eos aliquam quas totam, nulla dicta
+            consequatur, ipsum hic atque nihil est, maxime blanditiis neque
+            facere consequuntur perferendis velit magnam enim? Libero iure
+            tempore minus consectetur ducimus. Ex, perspiciatis. Laborum, natus
+            eligendi consectetur odio eius quasi veritatis quam qui est deserunt
+            unde ex ad, maiores minima ea ipsa quia repellat consequatur culpa
+            odit, eos magni cum! Sapiente. Molestiae, officiis quod consequuntur
+            enim facilis reiciendis? Molestiae exercitationem adipisci
+            laboriosam illo blanditiis voluptas perferendis, soluta, harum
+            suscipit praesentium odit, maiores modi architecto dolor obcaecati
+            quasi neque sed eaque odio!
+          </p>
+        </section>
+      </div>
+      <section id="section_2">
+        <article id="konkurrence">
+          <h2>Konkurrence</h2>
+          <p></p>
+        </article>
+        <article id="link">
+          <a href="#"
+            >Klik her for at købe et gavekort <br />
+            (og deltag automatisk)</a
+          >
+        </article>
+        <figure>
+          <img src="" alt="" />
+          <img src="" alt="" />
+        </figure>
+      </section>
+      <section id="section_3">
+        <figure id="img_galleri"></figure>
+        <div id="arrow_system">
+          <img
+            id="arrow_left"
+            src="ikoner/left_arrow_bkack.png"
+            alt="arrowleft"
+          />
+          <img id="separator" src="ikoner/separator_black.png" alt="separator" />
+          <img
+            id="arrow_right"
+            src="ikoner/right_arrow_black.png"
+            alt="arrowleft"
+          />
+        </div>
+      </section>
+    </main>
     <footer>
       <div>
-        <span>Addresse</span>
+        <span>Adresse</span>
         <span
           >Teater Groben <br />
           Nørrebrogade 37 <br />
