--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <h1>#SesPåGroben</h1>
+      <h1 class="groben">#SesPåGroben</h1>
       <nav>
         <a href="index.html">Tilbage til kampagnen</a>
       </nav>
@@ -38,7 +38,7 @@
       </div>
         <article>
           <h2>Kampagnen</h2>
-          <h3># Ses På Groben</h3>
+          <h3 class="groben"># Ses På Groben</h3>
           <section id="kampagen_wrapper">
             <article>
               <p>
