--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <a id="logo" href="index.html"
-        ><img src="favicon_logo/groben_black.svg" alt="logo"
+        ><img src="favicon_logo/g_black.svg" alt="logo"
       /></a>
 
       <nav>
@@ -45,7 +45,7 @@
     </header>
     <main>
       <h1 class="groben">#SesPåGroben</h1>
-      <div class="wrapper">
+      <section id="section_1">
         <iframe src="" frameborder="0"></iframe>
         <section>
           <p>
@@ -62,14 +62,14 @@
             quasi neque sed eaque odio!
           </p>
         </section>
-      </div>
+      </section>
       <section id="section_2">
         <article id="konkurrence">
           <h2>Konkurrence</h2>
           <p></p>
         </article>
         <article id="link">
-          <a href="#"
+          <a href="#error.html"
             >Klik her for at købe et gavekort <br />
             (og deltag automatisk)</a
           >
@@ -109,7 +109,7 @@
       </section>
     </main>
     <footer>
-      <div>
+      <div class="footer_div">
         <span>Adresse</span>
         <span
           >Teater Groben <br />
@@ -117,14 +117,15 @@
           2200 København N
         </span>
       </div>
-      <div>
-        <img src="favicon_logo/g_black.svg" alt="logo" />
+      <div class="footer_div">
+        <a href="#logo"> <img src="favicon_logo/g_black.svg" alt="logo" /></a>
       </div>
-      <div>
-        <span>Kontakt</span>
-        <span>Tlf. : 35 30 05 00</span>
-        <span>Mandag - Onsdag : 17-20 (i spilleperioder)</span>
-        <span>Mail : billet@grob.dk</span>
+      <div class="footer_div">
+        <span>Kontakt <br />Tlf. : 35 30 05 00 </span>
+        <span
+          >Mandag - Onsdag : 17-20 <br />
+          (i spilleperioder) <br />Mail : billet@grob.dk</span
+        >
       </div>
       <div class="so_me">
         <a href="https://www.facebook.com/teatergrob"
@@ -174,5 +175,6 @@
 
       function start() {}
     </script>
+    <script src="gallery.js"></script>
   </body>
 </html>
