--- a/index.html
+++ b/index.html
@@ -66,18 +66,54 @@
       <section id="section_2">
         <article id="konkurrence">
           <h2>Konkurrence</h2>
-          <p></p>
+          <p>
+            Nu vi åbner Grobens døre op igen tilbyder vi den fedeste konkurrence
+            ! <br />
+            Du får nemlig chancen for at bla. vinde VIP årskort til dig OG 3 af
+            dine venner. <br> Det kan du ikke sige nej til !
+          </p>
+          <p>
+          <h3>Regler for konkurrencen:</h3>
+          <ul>
+            <li>Tag tre af dine divaer i kommentarfeltet på vores insta post</li>
+            <li>Like vores insta story</li>
+            <li>
+              Følg Groben her på Insta, så du altid kan følge med på farten!
+            </li>
+          </ul></p>
+          <p>
+            <b>Vi finder en vinder fredag d. 31. marts! </b> <br />
+            Så drej lykkehjulet ven ;-) <br> Easy peasy ik’ ?
+          </p>
+          <p>
+          <h3>De premier du kan vinde: </h3>
+          <ul>
+            <li>1x VIP årskort til dig og 3 af dine venner</li>
+            <li>2x 500kr gavekort til vores samarbejdende tattoo artist </li>
+            <li>5x merch
+            packages (bla. stickers , en t-shirt (one-size) og en tote bag) </li>
+            <li> 7x
+            stickers bundle </li>
+          </ul></p>
+          <p>
+            
+           Husk også at tjekke vores fede videoer og nye post
+            på vores insta, facebook og youtube. <br> Vi glæder os til at se dig få
+            de gaver du fortjener ♥ <br> Ha’en god en søde og #SesPåGroben ! <br> <small>
+            Konkurrencen ender d.31/03/22</small>
+           </p>
         </article>
+      
+        <figure id="konku_img">
+          <img src="pics/kampagne/konkurrence.png" alt="konkurrence" />
+
+        </figure>
         <article id="link">
           <a href="#error.html"
             >Klik her for at købe et gavekort <br />
             (og deltag automatisk)</a
           >
         </article>
-        <figure>
-          <img src="" alt="" />
-          <img src="" alt="" />
-        </figure>
       </section>
       <section id="section_3">
         <figure id="img_galleri"></figure>
