--- a/index.html
+++ b/index.html
@@ -48,19 +48,10 @@
       <section id="section_1">
         <iframe src="" frameborder="0"></iframe>
         <section>
-          <p>
-            Vitae doloremque qui eos aliquam quas totam, nulla dicta
-            consequatur, ipsum hic atque nihil est, maxime blanditiis neque
-            facere consequuntur perferendis velit magnam enim? Libero iure
-            tempore minus consectetur ducimus. Ex, perspiciatis. Laborum, natus
-            eligendi consectetur odio eius quasi veritatis quam qui est deserunt
-            unde ex ad, maiores minima ea ipsa quia repellat consequatur culpa
-            odit, eos magni cum! Sapiente. Molestiae, officiis quod consequuntur
-            enim facilis reiciendis? Molestiae exercitationem adipisci
-            laboriosam illo blanditiis voluptas perferendis, soluta, harum
-            suscipit praesentium odit, maiores modi architecto dolor obcaecati
-            quasi neque sed eaque odio!
-          </p>
+          <p>#SesPåGrobener vores Grand Re-Opening kampagne. <br> Vi tænkte meget over hvordan vi kunne give dig gode muligheder for at komme og nyde vores lækre teater.</p>
+          <p><em> Årskort !</em> Det var jo løsningen, det er den mere permanente måde at opleve teater på. <br> Ligesom din tatovering er det en mere permanent måde at opleve det kunst du elsker.</p>
+          <p>Vi tilbyder i den forbindelse en ekstra fed konkurrence som du kan deltage i NU.</p>
+          <p>Du kan vinde så mange fede premier! <br> Husk at se vores videoer på youtube! <br> Vi glæder os til at se dig ♥</p>
         </section>
       </section>
       <section id="section_2">
@@ -106,17 +97,13 @@
       
         <figure id="konku_img">
           <img src="pics/kampagne/konkurrence.png" alt="konkurrence" />
-
         </figure>
         <article id="link">
-          <a href="#error.html"
-            >Klik her for at købe et gavekort <br />
-            (og deltag automatisk)</a
-          >
+          <a href="#error.html">Klik her for at købe et gavekort</a>
         </article>
       </section>
       <section id="section_3">
-        <figure id="img_galleri"></figure>
+        <div id="img_galleri"></div>
         <div id="arrow_system">
           <img
             id="arrow_left"
