images og nyeste masonry også

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,54 +36,65 @@
           <img src="pics/dokumentation/projekt.png" alt="projekt" />
         </article>
       </div>
-        <article>
-          <h2>Kampagnen</h2>
-          <h3 class="groben"># Ses På Groben</h3>
-          <section id="kampagen_wrapper">
-            <article>
-              <p>
-                Vi har valgt at udarbejde en kampagne som skal er et ordspil med
-                Tatoveringer og Årskort.
-              </p>
-              <p>
-                At de begge to er en mere permanent løsning på en/t
-                tegning/teater stykke.
-              </p>
-            </article>
-            <article>
-              <p>
-                Vi har valgt at ændre navnet Grob til Groben, vi synes det kunne
-                blive mere brugt i almindelige samtaler på den måde.
-              </p>
-              <p>For eksempel : Ses på Groben senere ?</p>
-              <p>
-                Lidt af et ordspil igen, Groben sagt højt lyder lidt som
-                gruppen.
-              </p>
-              <p>Det promovere nemlig det sociale og hygge ved teatret.</p>
-            </article>
-          </section>
-        </article>
-      
+      <article>
+        <h2>Kampagnen</h2>
+        <h3 class="groben"># Ses På Groben</h3>
+        <section id="kampagen_wrapper">
+          <article>
+            <p>
+              Vi har valgt at udarbejde en kampagne som skal er et ordspil med
+              Tatoveringer og Årskort.
+            </p>
+            <p>
+              At de begge to er en mere permanent løsning på en/t tegning/teater
+              stykke.
+            </p>
+          </article>
+          <article>
+            <p>
+              Vi har valgt at ændre navnet Grob til Groben, vi synes det kunne
+              blive mere brugt i almindelige samtaler på den måde.
+            </p>
+            <p>For eksempel : Ses på Groben senere ?</p>
+            <p>
+              Lidt af et ordspil igen, Groben sagt højt lyder lidt som gruppen.
+            </p>
+            <p>Det promovere nemlig det sociale og hygge ved teatret.</p>
+          </article>
+        </section>
+      </article>
+
       <article>
         <h2>Billeder af vores projekt</h2>
         <section>
-          <figure>
-            <img src="" alt="" />
+          <figure class="galleri">
+            <img src="pics/kampagne/pic1.png" alt="pic 1" />
+            <img src="pics/kampagne/pic2.png" alt="pic 2" />
+            <img src="pics/kampagne/pic3.png" alt="pic 3" />
+            <img src="pics/kampagne/pic4.png" alt="pic 4" />
+            <img src="pics/kampagne/quiz.jpg" alt="quiz" />
+            <img src="pics/kampagne/konkurrence.png" alt="konkurrence" />
+            <img src="pics/dokumentation/pic6.png" alt="pic 6" />
+            <img src="pics/dokumentation/pic7.png" alt="pic 7" />
+            <img src="pics/kampagne/insta.png" alt="insta" />
+            <img src="pics/kampagne/facebook.png" alt="facebook" />
+            <img src="pics/kampagne/pic5.png" alt="pic 5" />
           </figure>
         </section>
       </article>
-      <article>
+      <article id="videoer">
         <h2>Videoerne</h2>
         <section>
           <h2>1 min video</h2>
           <iframe src="" frameborder="0"></iframe>
-          <p>link til some artiklen ting</p>
+
+          <img src="pics/kampagne/facebook.png" alt="so me facebook" />
         </section>
         <section>
           <h2>14 sek video</h2>
           <iframe src="" frameborder="0"></iframe>
-          <p>link til so me artiklen</p>
+  
+          <img src="pics/kampagne/insta.png" alt="so me insta" />
         </section>
       </article>
     </main>
