--- a/index.html
+++ b/index.html
@@ -98,9 +98,6 @@
         <figure id="konku_img">
           <img src="pics/kampagne/konkurrence.png" alt="konkurrence" />
         </figure>
-        <article id="link">
-          <a href="#error.html">Klik her for at købe et gavekort</a>
-        </article>
       </section>
       <section id="section_3">
         <div id="img_galleri"></div>
@@ -125,9 +122,9 @@
       <section id="section_4">
         <h2>Nyeste</h2>
         <div class="nyeste_wrapper">
-          <article id="nyeste_insta"><img src="" alt="insta" /></article>
-          <article id="nyeste_events"><img src="" alt="events" /></article>
-          <article id="nyeste_facebook"><img src="" alt="facebook" /></article>
+          <article class="nyeste"><h3>Insta</h3><a href="error.html"><img class="nyeste_img" src="pics/kampagne/insta.png" alt="insta" /></a></article>
+          <article class="nyeste"><h3>Event</h3><a href="error.html"><img class="nyeste_img"  src="pics/kampagne/quiz.jpg" alt="events" /></a></article>
+          <article  class="nyeste"><h3>Facebook</h3><a href="error.html"><img class="nyeste_img"  src="pics/kampagne/facebook.png" alt="facebook" /></a></article>
         </div>
       </section>
     </main>
