layout og meta lidt mere

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="favicon_logo/g_black.svg"
       type="image/svg"
     />
+        <meta
+      name="kampagne video og billeder"
+      content="Billeder og video gruppe 16 tema 08 Projekt Grob insta facebook konkurrence"
+    />
     <title>GROBEN</title>
   </head>
   <body>
