--- a/portfolio.html
+++ b/portfolio.html
@@ -65,19 +65,31 @@
       </article>
 
       <article>
-        <h2>Billeder af vores projekt</h2>
-        <section>
+        <section id="galleri">
+          <h2>Billeder af vores projekt</h2>
           <figure class="galleri">
             <img src="pics/kampagne/pic1.png" alt="pic 1" />
             <img src="pics/kampagne/pic2.png" alt="pic 2" />
             <img src="pics/kampagne/pic3.png" alt="pic 3" />
             <img src="pics/kampagne/pic4.png" alt="pic 4" />
-            <img src="pics/kampagne/quiz.jpg" alt="quiz" />
-            <img src="pics/kampagne/konkurrence.png" alt="konkurrence" />
-            <img src="pics/dokumentation/pic6.png" alt="pic 6" />
-            <img src="pics/dokumentation/pic7.png" alt="pic 7" />
             <img src="pics/kampagne/insta.png" alt="insta" />
             <img src="pics/kampagne/facebook.png" alt="facebook" />
+            <div>
+              <img src="pics/kampagne/quiz.jpg" alt="quiz" />
+              <img src="pics/kampagne/konkurrence.png" alt="konkurrence" />
+            </div>
+            <img src="pics/dokumentation/pic6.png" alt="pic 6" />
+            <img src="pics/dokumentation/pic7.png" alt="pic 7" />
+            <div>
+              <img class="lille" src="favicon_logo/g_black.svg" alt="groben" />
+              <img class="lille" src="favicon_logo/g_white.svg" alt="groben" />
+
+              <div>
+                <img src="favicon_logo/groben_black.svg" alt="groben" />
+                <img src="favicon_logo/groben_white.svg" alt="groben" />
+              </div>
+            </div>
+
             <img src="pics/kampagne/pic5.png" alt="pic 5" />
           </figure>
         </section>
@@ -93,7 +105,7 @@
         <section>
           <h2>14 sek video</h2>
           <iframe src="" frameborder="0"></iframe>
-  
+
           <img src="pics/kampagne/insta.png" alt="so me insta" />
         </section>
       </article>
