video layout magler kun links

--- a/portfolio.html
+++ b/portfolio.html
@@ -98,13 +98,27 @@
         <h2>Videoerne</h2>
         <section>
           <h2>1 min video</h2>
-          <iframe src="" frameborder="0"></iframe>
+          <iframe
+            width="784"
+            height="441"
+            src="#"
+            title="#SesPåGroben"
+            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
 
           <img src="pics/kampagne/facebook.png" alt="so me facebook" />
         </section>
         <section>
           <h2>14 sek video</h2>
-          <iframe src="" frameborder="0"></iframe>
+          <iframe
+            width="784"
+            height="441"
+            src="#"
+            title="#SesPåGroben"
+            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
 
           <img src="pics/kampagne/insta.png" alt="so me insta" />
         </section>
