--- a/portfolio.html
+++ b/portfolio.html
@@ -101,7 +101,7 @@
           <iframe
             width="784"
             height="441"
-            src="#"
+            src="https://www.youtube.com/embed/kwJwXCFYKTE"
             title="#SesPåGroben"
             allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
@@ -114,7 +114,7 @@
           <iframe
             width="784"
             height="441"
-            src="#"
+            src="https://www.youtube.com/embed/JJTYItPbhdI"
             title="#SesPåGroben"
             allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
